--- a/_config.yml
+++ b/_config.yml
@@ -112,10 +112,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Jaewon"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "Jaewon의 개발 블로그입니다."
+  location         : "South Korea"
   email            :
   links:
     - label: "Email"
