--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "default", "dirt"
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "개발 일지"
+title                    : "Jaynote"
 title_separator          : "|"
 subtitle                 : "Small positive action"
-name                     : "Jaewon"
-description              : "Jaewon의 개발 블로그입니다."
+name                     : # "Jay"
+description              : # "Jaewon의 개발 블로그입니다."
 url                      : "https://jwlee3746.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
